--- a/css/GameOfLife.css
+++ b/css/GameOfLife.css
@@ -1,8 +1,5 @@
-a img {
-  margin: 0; }
-
 a:link {
-  color: #7fdff1;
+  color: #00aeb3;
   text-decoration: none; }
 
 a:hover {
@@ -16,9 +13,13 @@ a:active {
 
 body {
   font-family: "consolas", "", serif;
-  color: #7fdff1;
+  color: #00aeb3;
   background-color: #000000;
   margin: 0; }
+
+h1 {
+  color: #00f7fc;
+  margin: 5px; }
 
 .btn-primary, .btn-primary:focus,
 .btn-primary.focus,
@@ -34,12 +35,14 @@ body {
 .open > .dropdown-toggle.btn-primary.focus,
 .open > .dropdown-toggle.btn-primary:focus,
 .open > .dropdown-toggle.btn-primary:hover {
-  color: #7fdff1;
-  background-image: linear-gradient(#002d7e, #006ffc);
+  color: #b3003c;
+  background-image: linear-gradient(#00aeb3, #00f7fc);
   background-color: #000000;
-  border-color: #00bdbf;
+  border-color: #00a1a3;
   padding: 2px;
-  margin: 2px; }
+  margin: 2px;
+  min-width: 20px;
+  min-height: 28px; }
 
 .btn-primary:focus,
 .open > .dropdown-toggle.btn-primary:focus,
@@ -56,71 +59,44 @@ body {
 .open > .dropdown-toggle.btn-primary:hover {
   color: black;
   background-color: #1d66fc;
-  background-image: linear-gradient(#00f7fc, #00f7fc); }
+  background-image: linear-gradient(#00aeb3, #00f7fc); }
 
-.buttonAdd {
+.buttonArea {
   display: flex;
-  align-self: center;
-  margin: 5px; }
+  justify-content: space-between;
+  padding: 5px;
+  width: 500px; }
 
-.buttonSave {
-  display: flex;
-  align-self: flex-end; }
+.buttonAreaTail {
+  justify-content: center; }
 
 .cell {
   width: 100%;
   height: 100%;
   background-color: black;
-  border-left: 1px solid #001a19;
-  border-top: 1px solid #001a19;
-  border-right: 1px solid #001a19;
-  border-bottom: 1px solid #001a19;
+  border-style: ridge;
+  border-width: 1px;
+  border-color: #000e47;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   border-radius: 5px; }
 
-img {
-  margin: 0 6px 0 0; }
-
-h1 {
-  margin: 0;
-  font-size: 5vh;
-  text-align: center; }
-
-h2 {
-  margin: 0px;
-  font-size: 3vh; }
-
-h5 {
-  font-size: 6vh; }
-
-textarea {
-  border-color: #00d6b2;
-  background-color: black;
-  height: 4em; }
-
-.addRecipeModal {
-  background-color: #000000; }
-
-.buttonArea {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px; }
-
-.buttonAreaTail {
-  justify-content: center; }
-
 .gridArea {
   display: flex;
   justify-content: center;
-  margin: 10px; }
+  margin: 10px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px; }
 
 .gridHolder {
   display: flex;
-  flex-flow: column; }
+  flex-flow: column;
+  border: 1px solid #00aeb3; }
 
-.flexcontainer-column, .recipeArea, .recipeExpanded {
+.flexcontainer-column {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column;
@@ -136,140 +112,52 @@ textarea {
   display: flex;
   justify-content: center; }
 
-.modal-container {
-  position: relative;
-  background-color: #000000; }
-
-.modal-container .modal, .modal-container .modal-backdrop {
-  position: absolute;
-  background-color: black; }
-
-.modal-content {
-  background-color: #00013a; }
-
-.modal-body {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start; }
-
-.recipe, .recipeCollapsed, .recipeExpanded {
-  margin: 5px;
-  border: 1px solid #79120f;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  border-radius: 5px; }
-
-.recipeArea {
-  width: 100%;
-  height: 100%;
-  float: left;
-  word-wrap: normal;
-  padding: 5px; }
-
-.recipeCollapsed {
-  background-color: #00013a; }
-
-.recipeDetails {
-  background-color: #00013a;
-  width: 100%;
-  padding: 5px; }
-
-.recipeExpanded {
-  background-color: #00013a;
-  border-color: #951612;
-  margin: 5px; }
-
-.recipeField {
-  background-color: #00013a; }
-
-.recipeTitle {
-  align-self: center;
-  text-align: center;
-  background-color: #00013a;
-  width: 100%;
-  padding: 5px; }
-  .recipeTitle:hover {
-    background-color: #a31a23;
-    color: #bccb66; }
-
-.recipeSubTitle {
-  background-color: #000000;
-  width: 100%;
-  padding: 5px; }
-
 .row {
   display: flex; }
 
 .rowHolder {
   display: flex; }
 
-.vertCenter, a:link, .logo {
+.vertCenter, a:link {
   display: flex;
   align-items: center; }
 
-#addRecipeModal {
-  background-color: #00013a; }
-
-#banner {
+#bottomMatter {
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
   display: flex;
-  justify-content: space-between;
-  background-color: black;
-  height: 5vh;
-  width: 100%;
-  border: 1px solid #79120f; }
-  #banner img {
-    height: 10vh;
-    width: 50%;
-    margin: 20px; }
+  flex-flow: column; }
 
-#buttons {
+#buttons, #buttonControlArea, #buttonMiscArea, #buttonViewArea {
   display: flex;
   justify-content: space-between; }
 
-#buttonControlArea {
-  display: flex;
-  justify-content: space-between; }
-
-#buttonViewArea {
-  display: flex;
-  justify-content: center; }
-  #buttonViewArea #buttonViewZoomArea {
-    margin: 2px; }
-  #buttonViewArea #buttonViewSizeArea {
-    margin: 2px; }
-  #buttonViewArea #buttonViewSpeedArea {
-    margin: 2px; }
-
-#buttonMiscArea {
-  display: flex;
-  justify-content: space-around; }
+#buttonViewArea #buttonViewZoomArea {
+  margin: 2px; }
+#buttonViewArea #buttonViewSizeArea {
+  margin: 2px; }
+#buttonViewArea #buttonViewSpeedArea {
+  margin: 2px; }
 
 #container {
   align-items: center;
   margin: 0;
   padding: 0; }
 
-#page {
+#feedback {
   display: flex;
   flex-flow: column;
-  margin-top: 5vh;
-  margin-bottom: 5vh;
+  align-items: center; }
+
+#page {
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
   margin-right: auto;
   margin-left: auto;
   overflow: hidden; }
-
-#recipeList {
-  width: 80%; }
-
-#tableBox {
-  width: 100%;
-  border: 1px solid #79120f; }
-
-#title {
-  display: flex;
-  justify-content: center;
-  border: 1px solid #79120f; }
 
 /*# sourceMappingURL=GameOfLife.css.map */
